kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.high-load.org
      secretName: hbgm-tls-cert
  rules:
    - host: "www.high-load.org"
      http:
        paths:
          - path: /eureka
            pathType: ImplementationSpecific
            backend:
              service:
                name: eureka-service
                port:
                  number: 8761
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: controller-service
                port:
                  number: 8080
