kubernetes/ingress/routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
spec:
  ingressClassName: nginx
  rules:
    - host: www.high-load.org
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: controller-service
                port:
                  number: 80
            path: /
